<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_select_country">

    <fragment
        android:id="@+id/navigation_select_country"
        android:name="zfani.assaf.corona_app.ui.select_country.SelectCountryFragment"
        android:label="@string/title_select_country"
        tools:layout="@layout/fragment_select_country" />

    <fragment
        android:id="@+id/navigation_current_location"
        android:name="zfani.assaf.corona_app.ui.current_location.CurrentLocationFragment"
        android:label="@string/title_current_location"
        tools:layout="@layout/fragment_current_location" />

    <fragment
        android:id="@+id/navigation_scan_nearby"
        android:name="zfani.assaf.corona_app.ui.scan_nearby.ScanNearByFragment"
        android:label="@string/title_scan_nearby"
        tools:layout="@layout/fragment_scan_nearby" />
</navigation>